--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet"> 
 </head>
 <body>
 <div class = "top">
@@ -16,55 +17,117 @@
 <div class = "belly">
 	<div class = "sider left">
 			<p style="text-indent: 2em;">
-				Texto introdutório importante que deixa claro que isso é um currículo.
+				Aluno de Ciência da Computação, com interesse em visão computacional, computação gráfica e automação.
 			</p>
 			<h3>
-				Secção
+				Formação
 			</h3>
 			<hr>
 			<p>
-				Texto
+				Graduação em andamento em <b>Ciência da Computação</b> pela UFMG desde 2018/2.
+			</p>
+			<p>
+				Curso de idiomas concluido no <b>Fisk</b> em 2016.
+			</p>
+			<p>
+				Curso básico ou profissionalizante em programação no <b> Prepara Cursos </b> em 2015.
+			</p>
+			<p>
+				Primeiro semestre do curso de italiano no CENEX.
 			</p>
 			<br>
-			
 			<h3>
-				Secção
+				Experiência
 			</h3>
 			<hr>
 			<p>
-				Texto
+				Iniciação científica no <b>Verlab</b>, laboratório de visão computacional em uma pesquisa sobre hyperlapse e música. (2019-2020) 1 ano
+			</p>
+			<p>
+				Estágio na <b>Invent Vision</b>, empresa de automação e software na bhtec, uso de QtCreator, git e opencv. (2021) 10 meses. 
+			</p>
+			<p>
+				Iniciação científica no <b>ILab</b>, na criação de um aplicativo para correção de cores em fotografias. Ainda em andamento.
 			</p>
 			<br>
 
 			<h3>
-				Secção
+				Publicações
 			</h3>
 			<hr>
 			<p>
-				Texto
+				<a href="http://sibgrapi.sid.inpe.br/rep/8JMKD3MGPEW34M/45CS7CS">Musical Hyperlapse: A Multimodal Approach to
+Accelerate First-Person Videos</a>
 			</p>
 			<br>
 	</div>
 	<div class = "sider right">
+			<h3>
+				Contato
+			</h3>
 			<p>
-				email@taltal.com
+				luizromanhol@ufmg.br
 			</p>
 			<p>
-				(31) 93128-4932
+				(31) 99412 - 5369
 			</p>
-			<p>
-				Rua dos Garar
-			</p>
+			<a href="https://www.linkedin.com/in/luiz-henrique-romanhol-ferreira-0064bb186/">
+				https://www.linkedin.com/in/luiz-henrique-romanhol-ferreira-0064bb186/
+			</a>
 			<p>
 				Belo Horizonte - MG
 			</p>
+			<br>
+			<h3>
+				Idiomas
+			</h3>
+			<p>
+				Inglês Fluente
+			</p>
+			<p>
+				Italiano  Básico
+			</p>
+			<br>
+			<h3>
+				Skills
+			</h3>
+			<table>
+				<tr>
+					<td><b>Blender</b></td>
+					<td><b>Python</b></td>
+				</tr>
+				<tr>
+					<td><b>Git</b></td>
+					<td><b>Opencv</b></td>
+				</tr>
+				<tr>
+					<td><b>QtCreator</b></td>
+					<td><b>Flask</b></td>
+				</tr>
+				<tr>
+					<td><b>SQL</b></td>
+					<td><b>Ultimaker</b></td>
+				</tr>
+				<tr>
+					<td><b>Unity</b></td>
+					<td><b>HTML, CSS</b></td>
+				</tr>
+				<tr>
+					<td><b>Torch</b></td>
+					<td><b>Sklearn</td>
+				</tr>
+				<tr>
+					<td><b>C#</b></td>
+					<td><b>Arduino</td>
+				</tr>
+			</table> 
 	</div>
 </div>
 <br>
 <div class = "foot">
 	<br>
 	<h4>
-		Luiz Romanhol
+		(31) 99412 - 5369&nbsp&nbspluizromanhol@ufmg.br
 	</h4>
 </div>
 
